welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:3: error: overriding method right in class AbstractBuggle of type ()Unit;
 method right needs `override' modifier
def right() {avance();avance();avance();avance();avance();avance();gauche();avance();avance();avance();droite();avance();avance();gauche();avance();droite()}
    ^